# AS_GeminiCaptioning

./: README.md  __init__.py  gemini_captioning_node.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
