[project]
name = "AS_GeminiCaptioning"
description = "A ComfyUI node that combines an image with simple text parameters to create a prompt, sends it to the Google Gemini API via the google-generativeai SDK, and returns the generated text response along with the original prompt and an execution log"
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["Pillow", "requests", "google-generativeai"]

[project.urls]
Repository = "https://github.com/svetozarov/AS_GeminiCaptioning"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "svetozarov"
DisplayName = "AS_GeminiCaptioning"
Icon = ""
